포스트 목록, 상세 페이지에서 대표 이미지 없을 때 문제 해결하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -73,7 +73,11 @@
             <hr>
 
             <!-- Preview Image -->
-            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}">
+            {% if post.head_image %}
+                <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}">
+            {% else %}
+                <img class="card-img-top" src="https://picsum.photos/seed/{{ post.id }}/600/200" alt="{{ p.title }}">
+            {% endif %}
 
             <hr>
 
