첨부 파일 있을 경우 포스트 상세 페이지에 다운로드 버튼 출력하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,6 +17,7 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -83,6 +84,24 @@
 
             <!-- Post Content -->
             <p>{{ post.content }}</p>
+
+            {% if post.file_upload %}
+                <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" role="button" download>
+                    Download:
+                    {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+                        <i class="far fa-file-excel"></i>
+                    {% elif post.get_file_ext == 'csv' %}
+                        <i class="fas fa-file-csv"></i>
+                    {% elif post.get_file_ext == 'docx' %}
+                        <i class="far fa-file-word"></i>
+                    {% else %}
+                        <i class="far fa-file-alt"></i>
+                    {% endif %}
+
+                    {{ post.get_file_name }}
+                </a>
+            {% endif %}
+
             <hr>
 
 
