--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,82 +1,69 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <head>
-        <title>{% block head_title %}Blog | 달타냥의 웹사이트{% endblock %}</title>
-        <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-        <!-- <link href="./practice.css" rel="stylesheet" type="text/css"> -->
-        <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        {% include 'blog/navbar.html' %}
+<head>
+    <title>{% block head_title %}Blog | 달타냥의 웹사이트{% endblock %}</title>
+    <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <!-- <link href="./practice.css" rel="stylesheet" type="text/css"> -->
+    <script src="https://kit.fontawesome.com/726bbd6862.js" crossorigin="anonymous"></script>
+</head>
+<body>
+{% include 'blog/navbar.html' %}
 
-        <div class="container">
-            <div class="row my-3">
-                <div class="col-md-8 col-lg-9" id="main-area">
-                    {% block main_area %}
-                    {% endblock %}
-                </div>
-                <div class="col-md-4 col-lg-3">
-                    <!-- Search Widget -->
-                    <div class="card my-4">
-                        <h5 class="card-header">Search</h5>
-                        <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-append">
+<div class="container">
+    <div class="row my-3">
+        <div class="col-md-8 col-lg-9" id="main-area">
+            {% block main_area %}
+            {% endblock %}
+        </div>
+        <div class="col-md-4 col-lg-3">
+            <!-- Search Widget -->
+            <div class="card my-4">
+                <h5 class="card-header">Search</h5>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-append">
                             <button class="btn btn-secondary" type="button">Go!</button>
                             </span>
-                        </div>
-                        </div>
                     </div>
+                </div>
+            </div>
 
-                    <!-- Categories Widget -->
-                    <div class="card my-4">
-                        <h5 class="card-header">Categories</h5>
-                        <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                <a href="#">Web Design</a>
-                                </li>
-                                <li>
-                                <a href="#">HTML</a>
-                                </li>
-                                <li>
-                                <a href="#">Freebies</a>
-                                </li>
-                            </ul>
-                            </div>
-                            <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                <a href="#">JavaScript</a>
-                                </li>
-                                <li>
-                                <a href="#">CSS</a>
-                                </li>
-                                <li>
-                                <a href="#">Tutorials</a>
-                                </li>
-                            </ul>
-                            </div>
-                        </div>
-                        </div>
+            <!-- Categories Widget -->
+            <div class="card my-4" id="categories-card">
+                <h5 class="card-header">Categories</h5>
+                <div class="card-body">
+                    <div class="row">
+
+                        <ul>
+                            {% for category in categories %}
+                            <li>
+                                <a href="#">{{ category.name }} ({{ category.post_set.count }})</a>
+                            </li>
+                            {% endfor %}
+                            <li>
+                                <a href="#">미분류 ({{ no_category_post_count }})</a>
+                            </li>
+                        </ul>
+
+
                     </div>
-
                 </div>
             </div>
 
         </div>
+    </div>
 
-        {% include 'blog/footer.html' %}
+</div>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-            crossorigin="anonymous"></script>
-    </body>
+{% include 'blog/footer.html' %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+</body>
 </html>
