--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,13 +7,18 @@
 
     {% for p in post_list %}
     <!-- Blog Post -->
-    <div class="card mb-4">
+    <div class="card mb-4" id="post-{{ p.id }}">
         {% if p.head_image %}
         <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p.title }}">
         {% else %}
         <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/600/200" alt="{{ p.title }}">
         {% endif %}
         <div class="card-body">
+            {% if p.category %}
+            <span class="badge badge-secondary float-right">{{ p.category }}</span>
+            {% else %}
+            <span class="badge badge-secondary float-right">미분류</span>
+            {% endif %}
             <h2 class="card-title">{{ p.title }}</h2>
             {% if p.hook_text %}
             <h5 class="text-muted">{{ p.hook_text }}</h5>
