--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -29,6 +29,16 @@
             <h5 class="text-muted">{{ p.hook_text }}</h5>
             {% endif %}
             <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+
+            {% if p.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in p.tags.iterator %}
+                    <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+                {% endfor %}
+                <br/>
+                <br/>
+            {% endif %}
+
             <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Read More &rarr;</a>
         </div>
         <div class="card-footer text-muted">
