--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -42,6 +42,15 @@
     <!-- Post Content -->
     <p>{{ post.content }}</p>
 
+    {% if post.tags.exists %}
+        <i class="fas fa-tags"></i>
+        {% for tag in post.tags.iterator %}
+            <a href="{{ tag.get_absolute_url }}"><span class="badge bg-light text-dark">{{ tag }}</span></a>
+        {% endfor %}
+        <br/>
+        <br/>
+    {% endif %}
+
     {% if post.file_upload %}
     <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" role="button" download>
         Download:
