--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,11 @@
         {% if category %}
             <span class="badge badge-secondary">{{ category }}</span>
         {% endif %}
+        {% if tag %}
+            <span class="badge badge-light">
+                <i class="fas fa-tags"></i> {{ tag }} ({{ tag.post_set.count }})
+            </span>
+        {% endif %}
     </h1>
 
     {% if post_list.exists %}
