--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,11 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %}
+    {% if user.is_authenticated %}
+        {% if user.is_superuser or user.is_staff %}
+            <a type="button" href="/blog/create_post/" class="btn btn-info btn-sm float-right"><i class="fas fa-pen"></i>&nbsp;&nbsp; New Post</a>
+        {% endif %}
+    {% endif %}
     <h1>
         Blog
         {% if category %}
