content 입력란에 마크다운 적용하기

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -16,4 +16,5 @@
     </table>
     <button type="submit" class="btn btn-primary float-right">Submit</button>
 </form>
+{{ form.media }}
 {% endblock %}
