--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
     {% endif %}
     <h1>
         Blog
+        {% if search_info %}<small class="text-muted">{{ search_info }}</small>{% endif %}
         {% if category %}
             <span class="badge badge-secondary">{{ category }}</span>
         {% endif %}
