--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about_me/">About me</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/board/">Board</a>
+                </li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
